--- a/CQSS.Pay.Web/Views/Doc/Alipay.cshtml
+++ b/CQSS.Pay.Web/Views/Doc/Alipay.cshtml
@@ -13,3 +13,4 @@
         <a href="/Doc/BarcodePay" target="_blank">查看文档...</a>
     </li>
 </ol>
+<a href="javascript:;" onclick="history.go(-1);">返回上一页</a>
