--- a/CQSS.Pay.Web/Views/Doc/Index.cshtml
+++ b/CQSS.Pay.Web/Views/Doc/Index.cshtml
@@ -1,20 +1,24 @@
 ﻿@{
     Layout = "~/Views/Shared/_LayoutDocument.cshtml";
-    ViewBag.Title = "世纪购 - 支付接口列表";
+    ViewBag.Title = CQSS.Pay.Util.AppConfig.Global.WebSiteName + " - 支付接口列表";
 }
 <h3>我们为您提供以下支付方式：</h3>
 <ol class="round">
     <li class="one">
         <h5>支付宝支付</h5>
-        <a href="/Doc/Alipay" target="_blank">查看文档...</a>
+        <a href="/Doc/Alipay">查看文档...</a>
     </li>
     <li class="two">
         <h5>微信支付</h5>
-        <a href="/Doc/WeChatPay" target="_blank">查看文档...</a>
+        <a href="/Doc/WeChatPay">查看文档...</a>
     </li>
     <li class="three">
         <h5>通联支付</h5>
-        <a href="/Doc/Allinpay" target="_blank">查看文档...</a>
+        <a href="/Doc/Allinpay">查看文档...</a>
+    </li>
+    <li class="four">
+        <h5>威富通支付</h5>
+        <a href="/Doc/SwiftPass">查看文档...</a>
     </li>
 </ol>
 <h3>其他说明文档：</h3>
@@ -28,7 +32,7 @@
 <ol class="round">
     <li class="one">
         <h5>支付测试</h5>
-        <a href="/Test/Index" target="_blank">点击测试...</a>
+        <a href="/Test/Index">点击测试...</a>
     </li>
     <li class="two">
         <h5>支付回执通知</h5>
