--- a/CQSS.Pay.Web/Views/Doc/SignDescription.cshtml
+++ b/CQSS.Pay.Web/Views/Doc/SignDescription.cshtml
@@ -1,12 +1,47 @@
-﻿@{
+﻿@using CQSS.Pay.Util;
+@using CQSS.Pay.Util.Helper;
+@using CQSS.Pay.Model.Api;
+@{
     Layout = "~/Views/Shared/_LayoutDocument.cshtml";
     ViewBag.Title = "签名算法说明";
+
+    var appId = AppConfig.Global.DocumentAppId;
+    var appSecret = AppConfig.Global.DocumentAppSecret;
+    var setting = JsonHelper.GetDefaultSettings();
+    setting.NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore;
+    var checkUrl = string.Format("http://{0}/sign/check", AppConfig.Global.Domain);
+
+    var orderInfo = new PayOrderInfo()
+    {
+        OrderId = "16063000000ZXHM",
+        PaymentAmt = "1.01",
+        OrderTime = "20160630150000",
+        NotifyUrl = "http://www.sjgo365.com/pay/notify?type=1",
+        ReturnUrl = "http://www.sjgo365.com/pay/payresult?type=1",
+    };
+    var data = JsonHelper.Serialize(orderInfo, setting);
+
+    #region 签名算法
+    var json = Newtonsoft.Json.Linq.JObject.Parse(data);
+    var dict = new SortedDictionary<string, string>();
+    var properties = json.Properties().ToList();
+    foreach (var item in properties)
+    {
+        var node = json[item.Name];
+        if (node.HasValues) { dict[item.Name] = Newtonsoft.Json.JsonConvert.SerializeObject(node); }
+        else { dict[item.Name] = node.ToString(); }
+    }
+    var stringA = string.Empty;
+    foreach (var item in dict) { stringA += string.Format("{0}={1}&", item.Key, item.Value); }
+    var stringB = stringA + appSecret;
+    var sign = CryptoHelper.MD5Encrypt(stringB);
+    #endregion
 }
 
 <h1>签名生成算法</h1><hr />
 <section class="contact">
     <p>签名生成的通用步骤如下： </p>
-    <p>第一步，设所有发送或者接收到的业务数据为集合M，将集合M内的参数按照参数名ASCII码从小到大排序（字典序），使用URL键值对的格式（即key1=value1&amp;key2=value2…keyn=valuen&amp;）拼接成字符串stringA。 </p>
+    <p>第一步，设所有发送或者接收到的业务数据为集合M，将集合M内的参数按照参数名ASCII码从小到大排序（字典序），使用URL键值对的格式（即key1=value1&key2=value2&key3=value3…key99=value99&）拼接成字符串stringA。 </p>
     <p>特别注意以下重要规则： </p>
     <ol>
         <li>◆ 参数名ASCII码从小到大排序（字典序）； </li>
@@ -15,30 +50,30 @@
         <li>◆ 验证调用返回签名时，传送的sign参数不参与签名，将生成的签名与该sign值作校验； </li>
         <li>◆ 支付接口可能增加字段，验证签名时必须支持增加的扩展字段； </li>
     </ol>
-    <p>第二步，在stringA最后拼接上signKey得到stringB字符串，并对stringB进行MD5运算，再将得到的32位字符串所有字符转换为大写，得到参数sign的值。</p>
+    <p>第二步，在stringA最后拼接上appSecret得到stringB字符串，并对stringB进行MD5运算，再将得到的32位字符串所有字符转换为大写，得到参数sign的值。</p>
     <p style="color:red;">
         <span class="label">备注：</span>
-        <span>请联系本站开发人员以获取signKey的值。</span>
+        <span>请联系本站管理人员以获取appId、appSecret的值。</span>
     </p>
     <br />
     <p>举例： </p>
     <p>假设传送的业务参数如下： </p>
     <div class="guide-msg">
-        <p>orderId：16063000000ZXHM </p>
-        <p>paymentAmt：1.01 </p>
-        <p>notifyUrl：http://www.sjgo365.com/pay/notify?type=1 </p>
-        <p>returnUrl：http://www.sjgo365.com/pay/payresult?type=1 </p>
-        <p>crossboardType：null </p>
-        <p>systemId：1 </p>
+        <p>orderId：@orderInfo.OrderId </p>
+        <p>paymentAmt：@orderInfo.PaymentAmt </p>
+        <p>orderTime：@orderInfo.OrderTime </p>
+        <p>notifyUrl：@orderInfo.NotifyUrl </p>
+        <p>returnUrl：@orderInfo.ReturnUrl </p>
     </div>
     <p>第一步：对参数按照key=value的格式，并按照参数名ASCII字典序排序如下： </p>
     <div class="guide-msg">
-        <p>stringA = "crossboardType=&amp;notifyUrl=http://www.sjgo365.com/pay/notify?type=1&amp;orderId=16063000000ZXHM&amp;paymentAmt=1.01&amp;returnUrl=http://www.sjgo365.com/pay/payresult?type=1&amp;systemId=1&amp;"; </p>
+        <p>stringA = "@stringA"; </p>
     </div>
-    <p>第二步：拼接API密钥：（假设 signKey = "C4DDF940-0E1D-4CAC-AD38-883B930D5170"） </p>
+    <p>第二步：拼接API密钥：（假设 appSecret = "@appSecret"） </p>
     <div class="guide-msg">
-        <p>stringB = stringA + signKey = "crossboardType=&amp;notifyUrl=http://www.sjgo365.com/pay/notify?type=1&amp;orderId=16063000000ZXHM&amp;paymentAmt=1.01&amp;returnUrl=http://www.sjgo365.com/pay/payresult?type=1&amp;systemId=1&amp;C4DDF940-0E1D-4CAC-AD38-883B930D5170"; </p>
-        <p>sign = MD5(stringB).toUpperCase() = "04E3AC02663F0DAF0BA467BC758F06B5" </p>
+        <p>stringB = stringA + appSecret </p>
+        <p style="padding-left:47px;">= "@stringB"</p>
+        <p>sign = MD5(stringB).toUpperCase() = "@sign" </p>
     </div>
     <br />
     <p>示例代码（C#）： </p>
@@ -47,9 +82,9 @@
         <p>/// 生成签名</p>
         <p>/// &lt;/summary&gt;</p>
         <p>/// &lt;param name=&quot;data&quot;&gt;生成签名的数据(json字符串)&lt;/param&gt;</p>
-        <p>/// &lt;param name=&quot;signKey&quot;&gt;签名加密密钥&lt;/param&gt;</p>
+        <p>/// &lt;param name=&quot;signSecret&quot;&gt;签名加密密钥&lt;/param&gt;</p>
         <p>/// &lt;returns&gt;&lt;/returns&gt;</p>
-        <p>public static string SignEncrypt(string data, string signKey)</p>
+        <p>public static string SignEncrypt(string data, string signSecret)</p>
         <p>{</p>
         <p class="ml35">var json = Newtonsoft.Json.Linq.JObject.Parse(data);</p>
         <br />
@@ -66,15 +101,15 @@
         <p class="ml35">}</p>
         <br />
         <p class="ml35">//拼接被加密的字符串</p>
-        <p class="ml35">string signString = string.Empty;</p>
+        <p class="ml35">var stringA = string.Empty;</p>
         <p class="ml35">foreach (var item in dict)</p>
         <p class="ml35">{</p>
-        <p class="ml70">signString += string.Format(&quot;{0}={1}&amp;&quot;, item.Key, item.Value);</p>
+        <p class="ml70">stringA += string.Format(&quot;{0}={1}&amp;&quot;, item.Key, item.Value);</p>
         <p class="ml35">}</p>
-        <p class="ml35">signString += signKey;</p>
+        <p class="ml35">var stringB += stringA + signSecret;</p>
         <br />
         <p class="ml35">//对数据进行MD5加密</p>
-        <p class="ml35">string sign = MD5Encrypt(signString);</p>
+        <p class="ml35">string sign = MD5Encrypt(stringB);</p>
         <p class="ml35">return sign;</p>
         <p>}</p>
         <br />
@@ -103,7 +138,7 @@
         <h3>接口地址：</h3>
     </header>
     <p>
-        http://@(CQSS.Pay.Util.AppConfig.Domain)/sign/check
+        @checkUrl
     </p>
     <header>
         <h3>系统参数：</h3>
@@ -118,11 +153,19 @@
             <th style="width:350px;">描述</th>
         </tr>
         <tr>
+            <td>appId</td>
+            <td>业务系统ID</td>
+            <td>string</td>
+            <td>是</td>
+            <td>@appId</td>
+            <td>业务系统ID，需要向本站管理人员申请</td>
+        </tr>
+        <tr>
             <td>sign</td>
             <td>数据签名</td>
             <td>string</td>
             <td>是</td>
-            <td>5651415CF8B7580A3C3D28A49E653C0D</td>
+            <td>@sign</td>
             <td>数据签名，详见 <a href="#">签名生成算法</a></td>
         </tr>
         <tr>
@@ -130,7 +173,7 @@
             <td>业务数据</td>
             <td>string</td>
             <td>是</td>
-            <td>{"orderId":"16063000000ZXHM","paymentAmt":"1.01","notifyUrl":"http://www.sjgo365.com/pay/notify?type=1","returnUrl":"http://www.sjgo365.com/pay/payresult?type=1","systemId":"1"}</td>
+            <td>@data</td>
             <td>业务参数序列化成的json格式的字符串</td>
         </tr>
     </table>
