--- a/CQSS.Pay.Web/Views/Doc/OnlinePay.cshtml
+++ b/CQSS.Pay.Web/Views/Doc/OnlinePay.cshtml
@@ -1,6 +1,44 @@
-﻿@{
+﻿@using CQSS.Pay.Util;
+@using CQSS.Pay.Util.Helper;
+@using CQSS.Pay.Model.Api;
+@{
     Layout = "~/Views/Shared/_LayoutDocument.cshtml";
     ViewBag.Title = "在线支付";
+
+    var alipayUrl = string.Format("http://{0}/alipay/onlinepay", AppConfig.Global.Domain);
+    var wechatpayUrl = string.Format("http://{0}/wechatpay/onlinepay", AppConfig.Global.Domain);
+    var allinpayUrl = string.Format("http://{0}/allinpay/onlinepay", AppConfig.Global.Domain);
+    var swiftpasswechatpayUrl = string.Format("http://{0}/swiftpasswechatpay/onlinepay", AppConfig.Global.Domain);
+    var appId = AppConfig.Global.DocumentAppId;
+    var appSecret = AppConfig.Global.DocumentAppSecret;
+    var setting = JsonHelper.GetDefaultSettings();
+    setting.NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore;
+    var urlFormat = "{0}appId={1}&sign={2}&data={3}";
+
+    var orderInfo = new PayOrderInfo()
+    {
+        OrderId = "16063000000ZXHM",
+        PaymentAmt = "1.01",
+        OrderTime = "20160630150000",
+        NotifyUrl = "http://www.sjgo365.com/pay/notify?type=1",
+        ReturnUrl = "http://www.sjgo365.com/pay/payresult?type=1",
+    };
+    var requestData = JsonHelper.Serialize(orderInfo, setting);
+    var requestSign = CryptoHelper.SignEncrypt(requestData, appSecret);
+    var requestUrl = string.Format("{0}?appId={1}&sign={2}&data={3}", alipayUrl, appId, requestSign, requestData);
+
+    var notifyInfo = new PayNotifyInfo()
+    {
+        OrderId = orderInfo.OrderId,
+        PaymentAmt = orderInfo.PaymentAmt,
+        TradeNo = "4005722001201606298074475088",
+        ExtTradeNo = "300432849028492804294208942",
+        Result = "1",
+    };
+    var notifyData = JsonHelper.Serialize(notifyInfo, setting);
+    var notifySign = CryptoHelper.SignEncrypt(notifyData, appSecret);
+    var notifyUrl = string.Format(urlFormat, orderInfo.NotifyUrl + (orderInfo.NotifyUrl.IndexOf("?") > 0 ? "&" : "?"), appId, notifySign, notifyData);
+    var returnUrl = string.Format(urlFormat, orderInfo.ReturnUrl + (orderInfo.ReturnUrl.IndexOf("?") > 0 ? "&" : "?"), appId, notifySign, notifyData);
 }
 <h1>@ViewBag.Title</h1><hr />
 <section class="contact">
@@ -15,15 +53,19 @@
     </header>
     <p>
         <span class="label">支付宝在线支付：</span>
-        <span>http://@(CQSS.Pay.Util.AppConfig.Domain)/alipay/onlinepay</span>
+        <span>@alipayUrl</span>
     </p>
     <p>
         <span class="label">微信在线支付：</span>
-        <span>http://@(CQSS.Pay.Util.AppConfig.Domain)/wechatpay/onlinepay</span>
+        <span>@wechatpayUrl</span>
     </p>
     <p>
         <span class="label">通联在线支付：</span>
-        <span>http://@(CQSS.Pay.Util.AppConfig.Domain)/allinpay/onlinepay</span>
+        <span>@allinpayUrl</span>
+    </p>
+    <p>
+        <span class="label">威富通微信在线支付：</span>
+        <span>@swiftpasswechatpayUrl</span>
     </p>
     <header>
         <h3>系统参数：</h3>
@@ -38,11 +80,19 @@
             <th style="width:350px;">描述</th>
         </tr>
         <tr>
+            <td>appId</td>
+            <td>业务系统ID</td>
+            <td>string</td>
+            <td>是</td>
+            <td>@appId</td>
+            <td>业务系统ID，需要向本站管理人员申请</td>
+        </tr>
+        <tr>
             <td>sign</td>
             <td>数据签名</td>
             <td>string</td>
             <td>是</td>
-            <td>F09652E34F3FE24DD14A4F1BF2F832D4</td>
+            <td>@requestSign</td>
             <td>数据签名，详见 <a href="/Doc/SignDescription" target="_blank">签名生成算法</a></td>
         </tr>
         <tr>
@@ -50,7 +100,7 @@
             <td>业务数据</td>
             <td>string</td>
             <td>是</td>
-            <td>{"orderId":"16063000000ZXHM","paymentAmt":"1.01","orderTime":"20160630150000","notifyUrl":"http://www.sjgo365.com/pay/notify?type=1","returnUrl":"http://www.sjgo365.com/pay/payresult?type=1","crossboardType":"1","goodsPrice":"0.97","taxPrice":"0.03","freightPrice":"0.01","buyerName":"张三","buyerCellphone":"13066669999","buyerIdCardNo":"50002319800101999X","systemId":"1"}</td>
+            <td>@requestData</td>
             <td>业务参数序列化成的json格式的字符串</td>
         </tr>
     </table>
@@ -71,7 +121,7 @@
             <td>订单编号</td>
             <td>string</td>
             <td>是</td>
-            <td>16063000000ZXHM</td>
+            <td>@orderInfo.OrderId</td>
             <td>业务系统生成的订单编号</td>
         </tr>
         <tr>
@@ -79,7 +129,7 @@
             <td>支付金额</td>
             <td>string</td>
             <td>是</td>
-            <td>1.01</td>
+            <td>@orderInfo.PaymentAmt</td>
             <td>正实数类型的字符串，最多保留2位小数，单位：元</td>
         </tr>
         <tr>
@@ -87,7 +137,7 @@
             <td>订单创建时间</td>
             <td>string</td>
             <td>是</td>
-            <td>20160630150000</td>
+            <td>@orderInfo.OrderTime</td>
             <td>日期格式：yyyyMMddHHmmss</td>
         </tr>
         <tr>
@@ -95,7 +145,7 @@
             <td>服务器异步通知支付成功的地址</td>
             <td>string</td>
             <td>是</td>
-            <td>http://www.sjgo365.com/pay/notify?type=1</td>
+            <td>@orderInfo.NotifyUrl</td>
             <td>接收支付成功的异步通知回调地址，通知url必须为直接可访问的url，支付结果以此通知地址收到的为准</td>
         </tr>
         <tr>
@@ -103,83 +153,15 @@
             <td>支付完成返回支付结果的着陆页面</td>
             <td>string</td>
             <td>是</td>
-            <td>http://www.sjgo365.com/pay/payresult?type=1</td>
-            <td>支付宝处理完请求后，从支付企业跳转到显示支付结果的着陆页面</td>
-        </tr>
-        <tr>
-            <td>crossboardType</td>
-            <td>订单跨境类型</td>
-            <td>string</td>
-            <td>否</td>
-            <td>1</td>
-            <td>取值范围 1.跨境订单 0.普通订单</td>
-        </tr>
-        <tr>
-            <td>goodsPrice</td>
-            <td>订单货款总金额</td>
-            <td>string</td>
-            <td>否</td>
-            <td>0.97</td>
-            <td>正实数类型的字符串，最多保留2位小数，单位：元。当crossboardType参数值为1时，此参数必填</td>
-        </tr>
-        <tr>
-            <td>taxPrice</td>
-            <td>订单税费总金额</td>
-            <td>string</td>
-            <td>否</td>
-            <td>0.03</td>
-            <td>正实数类型的字符串，最多保留2位小数，单位：元。当crossboardType参数值为1时，此参数必填</td>
-        </tr>
-        <tr>
-            <td>freightPrice</td>
-            <td>订单运费总金额</td>
-            <td>string</td>
-            <td>否</td>
-            <td>0.01</td>
-            <td>正实数类型的字符串，最多保留2位小数，单位：元。当crossboardType参数值为1时，此参数必填</td>
-        </tr>
-        <tr>
-            <td>buyerName</td>
-            <td>购买人姓名</td>
-            <td>string</td>
-            <td>否</td>
-            <td>张三</td>
-            <td>购买人真实的姓名，必须与身份证号对应的姓名一致。当crossboardType参数值为1时，此参数必填</td>
-        </tr>
-        <tr>
-            <td>buyerCellphone</td>
-            <td>购买人手机号码</td>
-            <td>string</td>
-            <td>否</td>
-            <td>13066669999</td>
-            <td>购买人用于收货的手机号码。当crossboardType参数值为1时，此参数必填</td>
-        </tr>
-        <tr>
-            <td>buyerIdCardNo</td>
-            <td>购买人身份证号</td>
-            <td>string</td>
-            <td>否</td>
-            <td>50002319800101999X</td>
-            <td>此身份证号对应的姓名必须与购买人姓名一致。当crossboardType参数值为1时，此参数必填</td>
-        </tr>
-        <tr>
-            <td>systemId</td>
-            <td>业务系统编号</td>
-            <td>string</td>
-            <td>否</td>
-            <td>1</td>
-            <td>用于确定调用业务系统的标识，正整数类型的字符串</td>
+            <td>@orderInfo.ReturnUrl</td>
+            <td>支付企业处理完请求后，从支付企业跳转到显示支付结果的着陆页面</td>
         </tr>
     </table>
-    <p style="color:red;">
-        <span class="label">备注：</span>
-        <span>当crossboardType参数值为1时，参数关系必须满足公式：paymentAmt = goodsPrice + taxPrice + freightPrice</span>
-    </p>
     <header>
         <h3>HTTP请求示例：</h3>
     </header>
     <p>
-        http://@(CQSS.Pay.Util.AppConfig.Domain)/alipay/onlinepay?sign=F09652E34F3FE24DD14A4F1BF2F832D4&data={"orderId":"16063000000ZXHM","paymentAmt":"1.01","orderTime":"20160630150000","notifyUrl":"http://www.sjgo365.com/pay/notify?type=1","returnUrl":"http://www.sjgo365.com/pay/payresult?type=1","crossboardType":"1","goodsPrice":"0.97","taxPrice":"0.03","freightPrice":"0.01","buyerName":"张三","buyerCellphone":"13066669999","buyerIdCardNo":"50002319800101999X","systemId":"1"}
+        @requestUrl
     </p>
 </section>
 <br />
@@ -189,7 +171,7 @@
         <h3>应用场景：</h3>
     </header>
     <p>
-        当支付企业通知用户支付成功时，系统将会通知业务系统
+        当支付企业通知支付系统用户支付成功时，系统将会通知业务系统
     </p>
     <header>
         <h3>通知地址：</h3>
@@ -210,11 +192,19 @@
             <th style="width:350px;">描述</th>
         </tr>
         <tr>
+            <td>appId</td>
+            <td>业务系统ID</td>
+            <td>string</td>
+            <td>是</td>
+            <td>@appId</td>
+            <td>业务系统ID，业务系统发起的支付请求中的“appId”参数的值</td>
+        </tr>
+        <tr>
             <td>sign</td>
             <td>数据签名</td>
             <td>string</td>
             <td>是</td>
-            <td>1C372C1B571D6289F6AAF30AD89ACB4A</td>
+            <td>@notifySign</td>
             <td>数据签名，详见 <a href="/Doc/SignDescription" target="_blank">签名生成算法</a></td>
         </tr>
         <tr>
@@ -222,7 +212,7 @@
             <td>业务数据</td>
             <td>string</td>
             <td>是</td>
-            <td>{"orderId":"16063000000ZXHM","tradeNo":"4005722001201606298074475088","paymentAmt":"1.01","result":"1"}</td>
+            <td>@notifyData</td>
             <td>业务参数序列化成的json格式的字符串</td>
         </tr>
     </table>
@@ -243,7 +233,7 @@
             <td>订单编号</td>
             <td>string</td>
             <td>是</td>
-            <td>16063000000ZXHM</td>
+            <td>@notifyInfo.OrderId</td>
             <td>业务系统产生的订单编号</td>
         </tr>
         <tr>
@@ -251,7 +241,7 @@
             <td>支付交易流水号</td>
             <td>string</td>
             <td>是</td>
-            <td>4005722001201606298074475088</td>
+            <td>@notifyInfo.TradeNo</td>
             <td>支付企业产生的支付交易流水号</td>
         </tr>
         <tr>
@@ -259,15 +249,23 @@
             <td>支付金额</td>
             <td>string</td>
             <td>是</td>
-            <td>1.01</td>
+            <td>@notifyInfo.PaymentAmt</td>
             <td>正实数类型的字符串，最多保留2位小数，单位：元</td>
+        </tr>
+        <tr>
+            <td>extTradeNo</td>
+            <td>第三方交易流水号</td>
+            <td>string</td>
+            <td>否</td>
+            <td>@notifyInfo.ExtTradeNo</td>
+            <td>第三方支付企业产生的交易流水号，当支付企业为威富通时，此参数必填</td>
         </tr>
         <tr>
             <td>result</td>
             <td>支付结果</td>
             <td>string</td>
             <td>是</td>
-            <td>1</td>
+            <td>@notifyInfo.Result</td>
             <td>取值范围：-1.异常 0.未知 1.成功 2.失败</td>
         </tr>
     </table>
@@ -275,7 +273,7 @@
         <h3>HTTP请求示例：</h3>
     </header>
     <p>
-        http://www.sjgo365.com/pay/notify?type=1&sign=1C372C1B571D6289F6AAF30AD89ACB4A&data={"orderId":"16063000000ZXHM","tradeNo":"4005722001201606298074475088","paymentAmt":"1.01","result":"1"}
+        @notifyUrl
     </p>
     <header>
         <h3>返回值：</h3>
@@ -346,11 +344,19 @@
             <th style="width:350px;">描述</th>
         </tr>
         <tr>
+            <td>appId</td>
+            <td>业务系统ID</td>
+            <td>string</td>
+            <td>是</td>
+            <td>@appId</td>
+            <td>业务系统ID，业务系统发起的支付请求中的“appId”参数的值</td>
+        </tr>
+        <tr>
             <td>sign</td>
             <td>数据签名</td>
             <td>string</td>
             <td>是</td>
-            <td>1C372C1B571D6289F6AAF30AD89ACB4A</td>
+            <td>@notifySign</td>
             <td>数据签名，详见 <a href="/Doc/SignDescription" target="_blank">签名生成算法</a></td>
         </tr>
         <tr>
@@ -358,7 +364,7 @@
             <td>业务数据</td>
             <td>string</td>
             <td>是</td>
-            <td>{"orderId":"16063000000ZXHM","tradeNo":"4005722001201606298074475088","paymentAmt":"1.01","result":"1"}</td>
+            <td>@notifyData</td>
             <td>业务参数序列化成的json格式的字符串</td>
         </tr>
     </table>
@@ -379,7 +385,7 @@
             <td>订单编号</td>
             <td>string</td>
             <td>是</td>
-            <td>16063000000ZXHM</td>
+            <td>@notifyInfo.OrderId</td>
             <td>业务系统产生的订单编号</td>
         </tr>
         <tr>
@@ -387,7 +393,7 @@
             <td>支付交易流水号</td>
             <td>string</td>
             <td>否</td>
-            <td>4005722001201606298074475088</td>
+            <td>@notifyInfo.TradeNo</td>
             <td>支付企业产生的支付交易流水号，当result参数的值为1时，如果还未收到支付企业异步通知，此参数为空，否则此参数必填</td>
         </tr>
         <tr>
@@ -395,15 +401,23 @@
             <td>支付金额</td>
             <td>string</td>
             <td>是</td>
-            <td>1.01</td>
+            <td>@notifyInfo.PaymentAmt</td>
             <td>正实数类型的字符串，最多保留2位小数，单位：元</td>
+        </tr>
+        <tr>
+            <td>extTradeNo</td>
+            <td>第三方交易流水号</td>
+            <td>string</td>
+            <td>否</td>
+            <td>@notifyInfo.ExtTradeNo</td>
+            <td>第三方支付企业产生的交易流水号，当result参数的值为1且支付企业为威富通时，如果还未收到支付企业异步通知，此参数为空，否则此参数必填</td>
         </tr>
         <tr>
             <td>result</td>
             <td>支付结果</td>
             <td>string</td>
             <td>是</td>
-            <td>1</td>
+            <td>@notifyInfo.Result</td>
             <td>取值范围：-1.异常 0.未知 1.成功 2.失败</td>
         </tr>
     </table>
@@ -411,6 +425,6 @@
         <h3>HTTP请求示例：</h3>
     </header>
     <p>
-        http://www.sjgo365.com/pay/payresult?type=1&sign=1C372C1B571D6289F6AAF30AD89ACB4A&data={"orderId":"16063000000ZXHM","tradeNo":"4005722001201606298074475088","paymentAmt":"1.01","result":"1"}
+        @returnUrl
     </p>
 </section>
