--- a/CQSS.Pay.Web/Views/Doc/WeChatPay.cshtml
+++ b/CQSS.Pay.Web/Views/Doc/WeChatPay.cshtml
@@ -14,6 +14,7 @@
     </li>
     <li class="three">
         <h5>申请退款</h5>
-        <a href="/Doc/PayRefund" target="_blank">查看文档...</a>
+        <a href="/Doc/SyncRefund" target="_blank">查看文档...</a>
     </li>
 </ol>
+<a href="javascript:;" onclick="history.go(-1);">返回上一页</a>
