--- a/CQSS.Pay.Web/Views/Shared/_LayoutDocument.cshtml
+++ b/CQSS.Pay.Web/Views/Shared/_LayoutDocument.cshtml
@@ -10,6 +10,7 @@
     <title>文档 - @PageTitle</title>
     <link type="text/css" rel="stylesheet" href="~/Content/base/Site.css" />
     <script type="text/javascript" src="/scripts/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="/scripts/sjg-ext.js"></script>
 </head>
 <body>
     <div id="body">
