--- a/CQSS.Pay.Web/Views/Shared/_LayoutPay.cshtml
+++ b/CQSS.Pay.Web/Views/Shared/_LayoutPay.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>世纪购 - @PageTitle</title>
+    <title>@CQSS.Pay.Util.AppConfig.Global.WebSiteName - @PageTitle</title>
 </head>
 <body>
     <div>
